{
    "name": "Controls",
    "maps": [
        {
            "name": "Clicks",
            "id": "5be05f7a-3a5b-4c37-921f-d6649cd42342",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "91271b4c-ada5-4c67-8746-20569745ff7b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "40619812-08cd-4253-a772-b9f986138200",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CursorPosition",
                    "type": "Value",
                    "id": "5c6c0197-4084-48e5-bab4-72913271a08f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2bb20576-c73d-4a60-9e42-90b5aad75658",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Alpha",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3128bf7e-65b6-4bb0-9262-186155896c31",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Alpha",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "96f2e33b-17e0-4caa-b8f7-a318eeb93d39",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc198291-8801-4e94-9003-d884416aa3fc",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Alpha",
                    "action": "CursorPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Touch",
            "id": "e150e25e-43c5-4f02-9ff4-c71f8da0f050",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "PassThrough",
                    "id": "fa4b8f17-7ca7-466e-9dbd-3434882e92b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PrimatyPosition",
                    "type": "Value",
                    "id": "3578b25d-2ae1-4b26-ab11-c59f8bf9ade0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Tap",
                    "type": "PassThrough",
                    "id": "334cb03e-ae24-40b0-b45d-b3d3f5dcc16d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Release",
                    "type": "PassThrough",
                    "id": "096874f4-3a44-4805-bbf3-50b113a32581",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "28e99f73-e755-4c00-bdfc-ff671a535fe2",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6863f48d-31bb-4ae0-8ec5-9bd9065ab170",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimatyPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8503526d-6a5a-4e75-9d9b-1e984eddac59",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a30fa21-be34-49f1-821a-0fc45b0372f8",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Release",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Alpha",
            "bindingGroup": "Alpha",
            "devices": []
        }
    ]
}